# jupyter_test_repo

./: .pre-commit-config.yaml  README.md  pyproject.toml
.jupyter/: jupyter_notebook_config.py  migrated
notebooks/: No .ipython file example.md  One last notebook.ipynb  One last notebook.md  One last notebook.py  The notebook should not be commited.ipynb  The output of this should not be visible.ipynb  Untitled.ipynb  Yet another try.ipynb  example.ipynb
notebooks/.ipynb_checkpoints/: This should not be committed-checkpoint.ipynb
notebooks/python/: The notebook should not be commited.py
