[tool.poetry]
name = "jupyter_test_repo"
version = "0.1.0"
description = ""
authors = ["Marta Radziszewska <marta.radziszewska@okra.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
matplotlib = "^3.3.3"
jupytext = "^1.7.1"
black = "^20.8b1"
flake8 = "^3.8.4"
nbstripout = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
